Visualization Using Matplotlib and Seaborn on IPL dataset

--- a/Practice_From_Books/Machine_Learning_With_Python/01_Exploratory_Data_Analysis/01_Working_With_Data_Frames_In_Python/ipl_data_analysis.ipynb
+++ b/Practice_From_Books/Machine_Learning_With_Python/01_Exploratory_Data_Analysis/01_Working_With_Data_Frames_In_Python/ipl_data_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "3b9609b8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "b7421852",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
       "Examples\n",
       "--------\n",
       ">>> pd.read_csv('data.csv')  # doctest: +SKIP\n",
-      "\u001b[31mFile:\u001b[39m      d:\\practice from books\\books_venv\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\n",
+      "\u001b[31mFile:\u001b[39m      d:\\learning-in-public\\lp_env\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\n",
       "\u001b[31mType:\u001b[39m      function"
      ]
     }
@@ -487,28 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "e5dbe97f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:1: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "<>:1: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "C:\\Users\\saadb\\AppData\\Local\\Temp\\ipykernel_1008\\4350421.py:1: SyntaxWarning: invalid escape sequence '\\P'\n",
-      "  ipl_auction_df = pd.read_csv('D:\\Practice from Books\\Machine Learning With Python\\Exploratory Data Analysis\\Working With Data Frames In Python\\IPL IMB381IPL2013.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ipl_auction_df = pd.read_csv('D:\\Practice from Books\\Machine Learning With Python\\Exploratory Data Analysis\\Working With Data Frames In Python\\IPL IMB381IPL2013.csv')"
+    "ipl_auction_df = pd.read_csv(r'D:\\Learning-in-public\\Practice_From_Books\\Machine_Learning_With_Python\\01_Exploratory_Data_Analysis\\01_Working_With_Data_Frames_In_Python\\IPL IMB381IPL2013.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "47ef123d",
    "metadata": {},
    "outputs": [
@@ -518,7 +507,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "5fb06a4a",
    "metadata": {},
    "outputs": [],
@@ -547,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "3226d7ae",
    "metadata": {},
    "outputs": [
@@ -648,7 +637,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "96de4d85",
    "metadata": {},
    "outputs": [
@@ -702,7 +691,7 @@
        " 'SOLD PRICE']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "7225c187",
    "metadata": {},
    "outputs": [
@@ -988,7 +977,7 @@
        "SOLD PRICE           50000         50000       350000     850000        800000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "0be55f30",
    "metadata": {},
    "outputs": [
@@ -1009,7 +998,7 @@
        "(130, 26)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "1b83dac7",
    "metadata": {},
    "outputs": [
@@ -1078,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "eacde34e",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1168,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "096b580c",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1280,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "e7424b7c",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1306,7 @@
        "Name: PLAYER NAME, dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "7a3a9bb5",
    "metadata": {},
    "outputs": [
@@ -1396,7 +1385,7 @@
        "4  Badrinath, S     IND"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "34d967ef",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1470,7 @@
        "8       Botha, J    2      SA"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "264668d6",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1510,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "5970cb57",
    "metadata": {},
    "outputs": [
@@ -1553,7 +1542,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "5aa0b194",
    "metadata": {},
    "outputs": [
@@ -1636,7 +1625,7 @@
        "3                      6       13       8          1"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1655,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "7abe5945",
    "metadata": {},
    "outputs": [
@@ -1723,7 +1712,7 @@
        "34  Henriques, MC       50000"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1734,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "0e1c893a",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1791,7 @@
        "113     Tiwary, SS     1600000"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1821,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "6e7cec20",
    "metadata": {},
    "outputs": [],
@@ -1831,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "dfab2cae",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1900,7 @@
        "4  Badrinath, S      100000      800000   700000"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "4e673ff6",
    "metadata": {},
    "outputs": [
@@ -2002,7 +1991,7 @@
        "93       Sehwag, V      400000     1800000  1400000"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2021,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "af6d2773",
    "metadata": {},
    "outputs": [
@@ -2035,7 +2024,7 @@
        "Name: SOLD PRICE, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "id": "49749cbc",
    "metadata": {},
    "outputs": [
@@ -2118,7 +2107,7 @@
        "3   520178.571 243214.286"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "id": "7ceda583",
    "metadata": {},
    "outputs": [
@@ -2185,7 +2174,7 @@
        "2    3  520178.571"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2197,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "id": "1e3ad40a",
    "metadata": {},
    "outputs": [
@@ -2241,7 +2230,7 @@
        "0    1  720250.000"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2252,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "id": "53c33ea8",
    "metadata": {},
    "outputs": [
@@ -2368,7 +2357,7 @@
        "10    3    W. Keeper  700000.000"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2388,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "id": "2cc2bda9",
    "metadata": {},
    "outputs": [
@@ -2516,7 +2505,7 @@
        "10    3    W. Keeper    700000.000    520178.571"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2536,7 +2525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "id": "458f0d8c",
    "metadata": {},
    "outputs": [
@@ -2616,7 +2605,7 @@
        "4    2      Batsman           654761.905      484534.884"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2636,7 +2625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "id": "ef55a36a",
    "metadata": {},
    "outputs": [
@@ -2776,7 +2765,7 @@
        "10    3    W. Keeper           700000.000      520178.571   0.346"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2788,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 38,
    "id": "d826bc87",
    "metadata": {},
    "outputs": [
@@ -2803,7 +2792,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2814,7 +2803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 39,
    "id": "4af3c118",
    "metadata": {},
    "outputs": [
@@ -2966,7 +2955,7 @@
        "10    3    W. Keeper           700000.000      520178.571   0.346 521223.077"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2986,7 +2975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "id": "65a5f39b",
    "metadata": {},
    "outputs": [
@@ -3054,7 +3043,7 @@
        "97     Sharma, RG      82"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3065,7 +3054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 41,
    "id": "82d08a16",
    "metadata": {},
    "outputs": [
@@ -3166,7 +3155,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3185,7 +3174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "id": "9efc37ad",
    "metadata": {},
    "outputs": [
@@ -3200,7 +3189,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3213,7 +3202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "lp_env",
    "language": "python",
    "name": "python3"
   },
