--- a/Practice_From_Books/Machine_Learning_With_Python/01_Exploratory_Data_Analysis/01_Working_With_Data_Frames_In_Python/ipl_data_analysis.ipynb
+++ b/Practice_From_Books/Machine_Learning_With_Python/01_Exploratory_Data_Analysis/01_Working_With_Data_Frames_In_Python/ipl_data_analysis.ipynb
@@ -3202,7 +3202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lp_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
