Flask FrameWork --> Jinja2

--- a/Flask_FrameWork/Flask_Thoery.ipynb
+++ b/Flask_FrameWork/Flask_Thoery.ipynb
@@ -31,7 +31,14 @@
    "metadata": {},
    "source": [
     "### 01. WSGI --> Web Server Gateway Interface\n",
-    "![WSGI Architecture](images/01_WSGI.jpeg)"
+    "![WSGI Architecture](images/01_WSGI.jpeg)\n",
+    "\n",
+    "***Explanation:***\n",
+    "- Client sends multiple requests (Req1, Req2, Req3)\n",
+    "- Requests first reach the *Web Server* (Apache, IIS, AWS EC2, Azure)\n",
+    "- *WSGI* acts as a bridge between the Web Server and Flask Web App\n",
+    "- Flask handles routes like /home, /api, /functionality\n",
+    "- Response is sent back to the client via the Web Server"
    ]
   },
   {
@@ -39,7 +46,14 @@
    "id": "e0c23a9d",
    "metadata": {},
    "source": [
-    "### 02. Jinja 2 Template Engine\n"
+    "### 02. Jinja 2 Template Engine\n",
+    "![Jinja2 Template Engine Flow](images/02_Jinja_2_Template_Engine.jpeg)\n",
+    "\n",
+    "**Explanation:**\n",
+    "- Jinja2 is a web template engine used by Flask\n",
+    "- It connects web templates with dynamic data sources\n",
+    "- Data can come from SQL DB, CSV files, ML models, or MongoDB\n",
+    "- The rendered output is sent as an HTML web page"
    ]
   }
  ],
