--- a/Probability/probability_Thoery.ipynb
+++ b/Probability/probability_Thoery.ipynb
@@ -163,6 +163,158 @@
    "cell_type": "markdown",
    "id": "40a25f41",
    "metadata": {},
+   "source": [
+    "### Probability Multiplication Rule (Independent and Dependent Events)\n",
+    "\n",
+    "![Probability Multiplication Rule](images/02_Probability_Multiplication_Rule_Page_1.png)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this session, we continue our discussion on **probability**.  \n",
+    "Previously, we studied the **addition rule** for mutually exclusive and non-mutually exclusive events.  \n",
+    "Now, we focus on the **multiplication rule**, which is used for:\n",
+    "\n",
+    "- **Independent events**\n",
+    "- **Dependent events**\n",
+    "\n",
+    "These concepts are fundamental in **statistics, machine learning, and Naive Bayes algorithms**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Independent Events\n",
+    "\n",
+    "Two events are **independent** if the occurrence of one **does not affect** the probability of the other.\n",
+    "\n",
+    "### Example: Tossing a Coin\n",
+    "\n",
+    "- Probability of getting **Head**:\n",
+    "\\[\n",
+    "P(H) = \\frac{1}{2}\n",
+    "\\]\n",
+    "\n",
+    "- Probability of getting **Tail**:\n",
+    "\\[\n",
+    "P(T) = \\frac{1}{2}\n",
+    "\\]\n",
+    "\n",
+    "Even if the first toss is Head, the probability of Tail in the second toss remains the same.  \n",
+    "Hence, coin tosses are **independent events**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example: Rolling a Dice\n",
+    "\n",
+    "- Probability of getting any specific number:\n",
+    "\\[\n",
+    "P(X = 1) = \\frac{1}{6}\n",
+    "\\]\n",
+    "\n",
+    "Each roll is independent of the previous roll.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Multiplication Rule for Independent Events\n",
+    "\n",
+    "For independent events:\n",
+    "\n",
+    "\\[\n",
+    "P(A \\text{ and } B) = P(A) \\times P(B)\n",
+    "\\]\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Probability of getting **Head and then Tail**:\n",
+    "\n",
+    "\\[\n",
+    "P(H \\text{ and } T) = \\frac{1}{2} \\times \\frac{1}{2} = \\frac{1}{4}\n",
+    "\\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "![Independent Events](images/02_Probability_Multiplication_Rule_Page_2.png)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Dependent Events\n",
+    "\n",
+    "Two events are **dependent** if the occurrence of one event **affects** the probability of the other.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example: Drawing Cards from a Deck\n",
+    "\n",
+    "- Total cards = 52\n",
+    "- Number of Kings = 4\n",
+    "\n",
+    "#### First Event:\n",
+    "\\[\n",
+    "P(K) = \\frac{4}{52}\n",
+    "\\]\n",
+    "\n",
+    "After drawing a King, the deck now has **51 cards**.\n",
+    "\n",
+    "#### Second Event (Queen given King is drawn):\n",
+    "\\[\n",
+    "P(Q \\mid K) = \\frac{4}{51}\n",
+    "\\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Multiplication Rule for Dependent Events\n",
+    "\n",
+    "For dependent events:\n",
+    "\n",
+    "\\[\n",
+    "P(A \\text{ and } B) = P(A) \\times P(B \\mid A)\n",
+    "\\]\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "\\[\n",
+    "P(K \\text{ and } Q) = \\frac{4}{52} \\times \\frac{4}{51}\n",
+    "\\]\n",
+    "\n",
+    "This concept is called **conditional probability** and is the foundation of **Bayes’ Theorem**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "![Dependent Events](images/02_Probability_Multiplication_Rule_Page_3.png)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "- **Independent events** do not influence each other  \n",
+    "- **Dependent events** influence subsequent probabilities  \n",
+    "- Multiplication rule differs based on dependency  \n",
+    "- Conditional probability is crucial in **ML algorithms**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Key Takeaways\n",
+    "\n",
+    "- Independent Events:\n",
+    "\\[\n",
+    "P(A \\text{ and } B) = P(A) \\times P(B)\n",
+    "\\]\n",
+    "\n",
+    "- Dependent Events:\n",
+    "\\[\n",
+    "P(A \\text{ and } B) = P(A) \\times P(B \\mid A)\n",
+    "\\]\n",
+    "\n",
+    "- Used extensively in:\n",
+    "  - Probability theory\n",
+    "  - Bayes’ theorem\n",
+    "  - Naive Bayes classifier\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ff7627",
+   "metadata": {},
    "source": []
   }
  ],
