--- a/DSA_with_Python/01_Python_Basics/1.1_variables.ipynb
+++ b/DSA_with_Python/01_Python_Basics/1.1_variables.ipynb
@@ -63,11 +63,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ddd87869",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Naming Conventions\n",
+    "# Variable names should be descriptive\n",
+    "# They must start with a letter or an '_' and contains letter, numbers and underscores\n",
+    "# Variables names case sensitive\n",
+    "\n",
+    "# Valid Variables names:\n",
+    "first_name=\"Musharraf\"\n",
+    "last_name=\"Bubere\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "416f7c83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Invalid Variable names\n",
+    "# 2age=30\n",
+    "# first-name=\"Musharraf\"\n",
+    "# @name=\"Musharraf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4e1a8db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Musharraf\n",
+      "Bubere\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Case Sensitivity\n",
+    "name=\"Musharraf\"\n",
+    "Name=\"Bubere\"\n",
+    "\n",
+    "print(name)\n",
+    "print(Name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "964ae275",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Understanding Varaible Types\n",
+    "# Python is dynamically typed of a variable is determined at runtime\n",
+    "age=25 # int\n",
+    "height=6.1 # float\n",
+    "name=\"Musharraf\" # str\n",
+    "is_student=True # bool\n",
+    "\n",
+    "print(type(name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a44477b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Type Checking and Conversion\n",
+    "\n",
+    "type(height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9a0f7ff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "25\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=25\n",
+    "print(type(age))\n",
+    "\n",
+    "# Type conversion\n",
+    "age_str=str(age)\n",
+    "print(age_str)\n",
+    "print(type(age_str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9a50e5c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "age='25'\n",
+    "print(type(int(age)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ab9fa7bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'Musharraf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m name=\u001b[33m\"\u001b[39m\u001b[33mMusharraf\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: 'Musharraf'"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"Musharraf\"\n",
+    "int(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "033bde98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "height=5.11\n",
+    "type(height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "380e2d00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(int(height))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9a79e1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 <class 'int'>\n",
+      "Hello <class 'str'>\n",
+      "3.14 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dynamic Typing\n",
+    "# Python allows the type of a variable to change as the program executes\n",
+    "var=10 # int\n",
+    "print(var, type(var))\n",
+    "\n",
+    "var=\"Hello\"\n",
+    "print(var, type(var))\n",
+    "\n",
+    "var=3.14\n",
+    "print(var, type(var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4854b343",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input\n",
+    "\n",
+    "age=int(input(\"What is the age:\"))\n",
+    "print(age, type(age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a76979b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 26.0\n",
+      "Difference: -16.0\n",
+      "Product: 105.0\n",
+      "Quotient: 0.23809523809523808\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simple Calculator\n",
+    "num1 = float(input(\"Enter first number: \"))\n",
+    "num2 = float(input(\"Enter second number: \"))\n",
+    "\n",
+    "sum = num1 + num2\n",
+    "difference = num1 - num2\n",
+    "product = num1 * num2\n",
+    "quotient = num1 / num2\n",
+    "\n",
+    "print(\"Sum:\", sum)\n",
+    "print(\"Difference:\", difference)\n",
+    "print(\"Product:\", product)\n",
+    "print(\"Quotient:\", quotient)"
+   ]
   }
  ],
  "metadata": {
